[project]
name = "saspolarize"
version = "0.2.0"
description = "Run SAS code on polars DataFrames."
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.39.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = "src"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]